--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Practice</title>
 </head>
 <body>
+    <h2>Hello world</h2>
     <h1>Lorem ipsum</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum eveniet labore animi.
      Officia vero harum, rerum ratione, voluptatibus omnis vitae sed quo a at amet, 
