--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Practice</title>
 </head>
 <body>
+    <h3>hellow Github</h3>
+    <h2>hello world</h2>
     <h1>Lorem ipsum</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum eveniet labore animi.
      Officia vero harum, rerum ratione, voluptatibus omnis vitae sed quo a at amet, 
