--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Practice</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Template 1</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h3>hellow Github</h3>
-    <h2>hello world</h2>
-=======
-    <h2>Hello world</h2>
->>>>>>> af6fcaaa26e508232829b13636c3120daf387a0c
-    <h1>Lorem ipsum</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ipsum eveniet labore animi.
-     Officia vero harum, rerum ratione, voluptatibus omnis vitae sed quo a at amet, 
-     dolor voluptas excepturi iure.</p>
+    <div class="header">
+        <div class="navbar">
+            <div class="logo">
+              <a href="#"><img src="images/logo.png"></a>  
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Mission</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
