.logo-btn .banner div and css added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css"  href="style.css"> 
     <title>Template 1</title>
 </head>
 <body>
@@ -20,6 +21,18 @@
                     <li>Contact</li>
                 </ul>
             </div>
+            <div class="login-btn">Login</div>
+        </div>
+        <div class="banner">
+            <div class="app-text">
+                <h3>airbnb for Yatching</h3>
+                <h1>Manage<br>Advantures</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                   A numquam, in ducimus unde sunt ipsam ut molestias sit odit deleniti nobis assumenda, 
+                   ratione repudiandae autem quos quasi earum non consequatur!
+                </p>
+            </div>
+
         </div>
     </div>
 </body>
