images and btn added with css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css"  href="style.css"> 
+    <link rel="stylesheet" href="style.css" type="text/css"  > 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" >
     <title>Template 1</title>
 </head>
 <body>
@@ -32,10 +33,17 @@
                 <h1>Manage<br>Advantures</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                    A numquam, in ducimus unde sunt ipsam ut molestias sit odit deleniti nobis assumenda, 
-                   ratione repudiandae autem quos quasi earum non consequatur!
-                </p>
-            </div>
+                   ratione repudiandae autem quos quasi earum non consequatur!</p>
+                 <div class="btn-group">
+                     <div class="signup-btn">Sign up now</div>
+                     <div class="play-btn-inner">
+                         <i class="fa-solid fa-play"></i>
+                     </div>
+                     <span>How it works</span>
 
+                 </div>   
+            
+            </div>
         </div>
     </div>
 </body>
