servies added with css

--- a/index.html
+++ b/index.html
@@ -37,13 +37,31 @@
                  <div class="btn-group">
                      <div class="signup-btn">Sign up now</div>
                      <div class="play-btn-inner">
-                         <i class="fa-solid fa-play"></i>
+                         <i class="fa-solid  fa-play"></i>
                      </div>
                      <span>How it works</span>
-
                  </div>   
-            
             </div>
+            <div class=" app-picture">
+                <img src="images/10.jpg">
+            </div>
+        </div>
+        <div class="about-services">
+            <ul>
+                <li>
+                    <img src="images/1.png">
+                    <h1>SEO Consultancy</h1>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
+                </li><li>
+                    <img src="images/2.png">
+                    <h1>Competitor Analysis</h1>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
+                </li><li>
+                    <img src="images/3.png">
+                    <h1>Social Media Marketing</h1>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
