social icons updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                          <i class="fa-solid  fa-play"></i>
                      </div>
                      <span>How it works</span>
-                 </div>   
+                 </div>
             </div>
             <div class=" app-picture">
                 <img src="images/10.jpg">
@@ -62,6 +62,14 @@
                     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
                 </li>
             </ul>
+            <div class="social-icons">
+                <ul>
+                    <li><a href=""><i class="<i class="fa-brands fa-facebook"></i>"></i></a></li>
+                    <li><a href=""><i class="<i class="fa-brands fa-twitter"></i>"></i></a></li>
+                    <li><a href=""><i class="<i class="fa-brands fa-instagram"></i>"></i></a></li>
+                    <li><a href=""><i class="<i class="fa-brands fa-linkedin"></i>"></i></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
