template completed must run on 75% screen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" >
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" >
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>Template 1</title>
 </head>
 <body>
@@ -37,7 +37,8 @@
                  <div class="btn-group">
                      <div class="signup-btn">Sign up now</div>
                      <div class="play-btn-inner">
-                         <i class="fa-solid  fa-play"></i>
+                        <i class="fa fa-play"></i>
+
                      </div>
                      <span>How it works</span>
                  </div>
@@ -64,10 +65,10 @@
             </ul>
             <div class="social-icons">
                 <ul>
-                    <li><a href=""><i class="<i class="fa-brands fa-facebook"></i>"></i></a></li>
-                    <li><a href=""><i class="<i class="fa-brands fa-twitter"></i>"></i></a></li>
-                    <li><a href=""><i class="<i class="fa-brands fa-instagram"></i>"></i></a></li>
-                    <li><a href=""><i class="<i class="fa-brands fa-linkedin"></i>"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
