--- a/index.html
+++ b/index.html
@@ -1,77 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css"  > 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" >
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>Template 1</title>
-</head>
-<body>
-    <div class="header">
-        <div class="navbar">
-            <div class="logo">
-              <a href="#"><img src="images/logo.png"></a>  
-            </div>
-            <div class="menu">
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Mission</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
-            <div class="login-btn">Login</div>
-        </div>
-        <div class="banner">
-            <div class="app-text">
-                <h3>airbnb for Yatching</h3>
-                <h1>Manage<br>Advantures</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                   A numquam, in ducimus unde sunt ipsam ut molestias sit odit deleniti nobis assumenda, 
-                   ratione repudiandae autem quos quasi earum non consequatur!</p>
-                 <div class="btn-group">
-                     <div class="signup-btn">Sign up now</div>
-                     <div class="play-btn-inner">
-                        <i class="fa fa-play"></i>
-
-                     </div>
-                     <span>How it works</span>
-                 </div>
-            </div>
-            <div class=" app-picture">
-                <img src="images/10.jpg">
-            </div>
-        </div>
-        <div class="about-services">
-            <ul>
-                <li>
-                    <img src="images/1.png">
-                    <h1>SEO Consultancy</h1>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
-                </li><li>
-                    <img src="images/2.png">
-                    <h1>Competitor Analysis</h1>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
-                </li><li>
-                    <img src="images/3.png">
-                    <h1>Social Media Marketing</h1>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.>
-                </li>
-            </ul>
-            <div class="social-icons">
-                <ul>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+hello
+this is my
+frist tutorial
